--- a/src/styles.css
+++ b/src/styles.css
@@ -117,6 +117,10 @@ p {
     display: flex;
     justify-content: center;
   }
+
+  footer {
+    padding-top: 50px;
+  }
 }
 
 @media (max-width: 400px) {
@@ -145,5 +149,9 @@ p {
   .primary-btn {
     display: flex;
     justify-content: center;
+  }
+
+  footer {
+    padding-top: 50px;
   }
 }
